--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/styles.css">
   <title>BakersWebsite</title>
 </head>
 <body>
-  <p>A bakers website to connect bakers with customers</p>
+  <div class="container">
+    <p>A bakers website to connect bakers with customers</p>
+  </div>
 </body>
 </html>
