Added an image caption.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text|Pacifico&display=swap" rel="stylesheet">
   <title>BakersWebsite</title>
 </head>
 <body>
   <div class="container">
-    <p>A bakers website to connect bakers with customers</p>
+    <h1>Bakers Website</h1>
+    <h4>Have some cake, it's someones birthday somewhere! </h4>
   </div>
 </body>
 </html>
