--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="container">
     <h1>Bakers Website</h1>
     <h4>Have some cake, it's someones birthday somewhere! </h4>
+    <p>This is is the best bakers website where you get your taste</p>
   </div>
 </body>
 </html>
