--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
     <h1>Bakers Website</h1>
     <h4>Have some cake, it's someones birthday somewhere! </h4>
   </div>
+ |  <div class="header">
+                    
+    <h1>BakersWebsite</h1>          
+<footer>
+&copy; |   BakersWebsite |  Terms of Use   |   Trademarks   | Privacy   |   Transparency
+</footer>
+</div>
 </body>
 </html>
