Added a cake images for showcase

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <div class="container">
     <h1>Bakers Website</h1>
     <h4>Have some cake, it's someones birthday somewhere! </h4>
+    <p>We have different tastes</p>
+    <img src="https://bit.ly/2X5mGCh" alt="braids" width="150px">
+    <img src="https://bit.ly/36XKzA9" alt="chocolate" width="130px" style="padding:30px">
   </div>
 </body>
 </html>
