--- a/index.html
+++ b/index.html
@@ -10,10 +10,33 @@
   <title>BakersWebsite</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Bakers Website</h1>
-    <h4>Have some cake, it's someones birthday somewhere! </h4>
-    <p>This is is the best bakers website where you get your taste</p>
+  <div class="container-fluid">
+    <div id="home">
+    <h1>Pieces & Slices</h1>
+    <h4>Have some cake, it's someones birthday somewhere!</h4>
+  </div>
+    <div  id="aboutus"><br>
+    <br>
+    <br>
+    <br>
+
+      <h2>WHAT WE DO</h2><br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-4">
+              <img src="https://bit.ly/32EPqmt" height="250px" width="250px">     
+        </div>
+        <div class="col-md-4">
+            <img src="https://bit.ly/36XtGWi" height="250px" width="250px">   
+          </div>
+          <div class="col-md-4">
+              <img src="https://bit.ly/2qIe5t8" height="250px" width="250px">   
+            </div> 
+
+      </div>
+    </div>
+  
   </div>
 </body>
 </html>
