editing of the index.html by adding p tags and styled at styles.css

--- a/index.html
+++ b/index.html
@@ -23,18 +23,27 @@
       <h2>WHAT WE DO</h2><br>
       <br>
       <br>
+      
+      <div class="container">
       <div class="row">
         <div class="col-md-4">
-              <img src="https://bit.ly/32EPqmt" height="250px" width="250px">     
+              <img src="https://bit.ly/32EPqmt" height="250px" width="250px">
+              <h3>1ST SAMPLE</h3>  
+              <p>At the first sample that is basically some of the samples of cup cakes that we bake and how the look like.</p>   
         </div>
         <div class="col-md-4">
-            <img src="https://bit.ly/36XtGWi" height="250px" width="250px">   
+            <img src="https://bit.ly/36XtGWi" height="250px" width="250px"> 
+            <h3>2ND SAMPLE</h3> 
+            <p>At the first sample that is basically some of the samples of cup cakes that we bake and how the look like.</p> 
           </div>
           <div class="col-md-4">
-              <img src="https://bit.ly/2qIe5t8" height="250px" width="250px">   
+              <img src="https://bit.ly/2qIe5t8" height="250px" width="250px">
+              <h3>3RD SAMPLE</h3>
+              <p>At the first sample that is basically some of the samples of cup cakes that we bake and how the look like.</p>  
             </div> 
 
       </div>
+    </div>
     </div>
   
   </div>
