--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 </head>
 <body>
   <div class="container-fluid">
+      <ul >
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+        
     <div id="home">
     <h1>Pieces & Slices</h1>
     <h4>Have some cake, it's someones birthday somewhere!</h4>
   </div>
-    <div  id="aboutus"><br>
+    <div  id="about"><br>
     <br>
     <br>
     <br>
