--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="col-md-4">
             <img src="https://bit.ly/34TGfjr" height="250px" width="250px">
-            <h3>RED VELVET CAKE ROLL </h3> 
+            <h3>RED VELVET </h3> 
             <p>It's official. Cake rolls are the easiest, fanciest dessert to make. I mean, just take a look at this red velvet cake roll. 
               Would you believe it took me less than an hour to put together and with very minimal effort? </p> 
           </div>
@@ -51,6 +51,32 @@
             </div> 
 
       </div>
+      
+    </div><BR></BR>
+    <BR></BR>
+    <BR></BR>
+    <div class="container"> 
+      <h2>HOW WE WORK</h2><BR></BR>
+      <BR></BR>
+      <BR></BR>
+      <div class="row">
+        <div class="col-md-4">
+              <img src="https://bit.ly/2O6CaSb" height="250px" width="250px">
+              <h3>UTENSILS</h3> 
+              <P>Basically these are some of the tools or the utensils that we using in our kitchen in the baking process and to make the output of the products delicious.</P>
+        </div>
+        <div class="col-md-4">
+            <img src="https://bit.ly/2KhOvlp" height="250px" width="250px">
+            <h3>BAKING UNIFORM</h3> 
+            <p>I our bakers shop our chefs must be in their uniform hence making the presantable in the work and professional.</p>
+          </div>
+          <div class="col-md-4">
+              <img src="https://bit.ly/2q9PFIP" height="250px" width="250px">
+              <h3>DELIVERY</h3> 
+              <p>We offer delivery services to our customers to any place of the country that they want us to delivery at a cheaper and affordable cost.</p>
+            </div>
+      </div>
+
     </div>
     </div>
   
