--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,28 @@
                 </div>
             </section>
         </div>
-               
+        <div class="formcontact">
+                <div class="form">
+                    <h2 class="text-capitalize mb-2">send us a message</h2>
+                    <form action="#" method="post">
+                        <div class="input-group">
+                            <input type="text" class="margin2" name="name" placeholder="first name"
+                                required="">
+                            <input type="text" name="name" placeholder="last name" required="">
+                        </div>
+                        <div class="input-group">
+                            <input type="email" class="margin2" name="email" placeholder="email@example.com"
+                                required="">
+                            <input type="text" name="number" placeholder="phone number" required="">
+                        </div>
+                        <div class="input-group">
+                            <textarea rows="4" cols="50" placeholder="message"></textarea>
+                        </div>
+                        <div class="input-group1">
+                            <input type="submit" value="send">
+                        </div>
+                    </form>
+                </div>
        
 </body>
 
