added an address form in my contact.html

--- a/contacts.html
+++ b/contacts.html
@@ -60,6 +60,16 @@
                         </div>
                     </form>
                 </div>
+                <div class="contact">
+                        <h3 class="text-capitalize mb-3">contact Information</h3>
+                        <p class="">Come dine with us and get the best cakes ever.</p>
+                        <address>
+                            <p class="my-3"><span class="fas fa-map-marker-alt"></span> 675-00900
+                                Kilimani,<span> Ngong Lane plaza 3rd floor</span> </p>
+                                <p class="my-3"><span class="fas fa-mobile-alt"></span> +254701646678 </p>
+                                    <a href="mailto:ccayreen24@gmail.com">ccayreen24@gmail.com</a> 
+                        </address>
+                    
        
 </body>
 
