--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <div class="container-fluid">
       <ul >
-          <li><a href="#home">Home</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="menu.html">Menu</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
         
     <div id="home">
