Added images to the menu to represent cakes sold.

--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/menu.css">
   <title>Menu</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+          <img src="images/blackforest.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/bananaCake.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/blueberry.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/carrot cake.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/redvelvet.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/vanillaCake.jpg" alt="">
+      </div>
+      <div class="col-lg-4">
+          <img src="images/chocolatefudge.jpg" alt="">
+      </div>
+
+    </div>
+  </div>
 </body>
 </html>
