--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pieces and Slices</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/contacts.css">
     <link href="https://fonts.googleapis.com/css?family=Literata|Yeon+Sung&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,8 +18,7 @@
             <ul >
                 <li><a href="contacts.html">Contacts</a></li>
                 <li><a href="menu.html">Menu</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </div>
            
