Added bootstrap stuling for the images (Arranged them in columns and rows).

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,48 @@
   <link rel="stylesheet" href="css/menu.css">
   <title>Menu</title>
 </head>
+
 <body>
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
-          <img src="images/blackforest.jpg" alt="">
+        <div class="cakes">
+          <img src="images/blackforest.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/bananaCake.jpg" alt="">
+        <div class="cakes">
+          <img src="images/bananaCake.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/blueberry.jpg" alt="">
+        <div class="cakes">
+          <img src="images/blueberry.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/carrot cake.jpg" alt="">
+        <div class="cakes">
+          <img src="images/carrot cake.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/redvelvet.jpg" alt="">
+        <div class="cakes">
+          <img src="images/chocolatefudge.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/vanillaCake.jpg" alt="">
+        <div class="cakes">
+          <img src="images/redvelvet.jpg" alt="" height="200" width="200">
+        </div>
       </div>
       <div class="col-lg-4">
-          <img src="images/chocolatefudge.jpg" alt="">
+        <div class="cakes">
+          <img src="images/vanillaCake.jpg" alt="" height="200" width="200">
+        </div>
       </div>
 
     </div>
   </div>
 </body>
+
 </html>
