Added more images to the cake galary.

--- a/menu.html
+++ b/menu.html
@@ -15,37 +15,37 @@
     <div class="row">
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/blackforest.jpg" alt="" height="200" width="200">
+          <img src="images/blackforest.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/bananaCake.jpg" alt="" height="200" width="200">
+          <img src="images/bananaCake.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/blueberry.jpg" alt="" height="200" width="200">
+          <img src="images/chocoCake.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/carrot cake.jpg" alt="" height="200" width="200">
+          <img src="images/carrotCake.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/chocolatefudge.jpg" alt="" height="200" width="200">
+          <img src="images/chocolate.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/redvelvet.jpg" alt="" height="200" width="200">
+          <img src="images/chocolateStrawberry.jpg" alt="" height="400" width="400">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/vanillaCake.jpg" alt="" height="200" width="200">
+          <img src="images/redVelvet1.webp" alt="" height="400" width="400">
         </div>
       </div>
 
