Added image captions to the menu galary and also added a bootstrap.js file.

--- a/menu.html
+++ b/menu.html
@@ -11,41 +11,55 @@
 </head>
 
 <body>
-  <div class="container">
+    <ul >
+        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="menu.html">Menu</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="index.html">Home</a></li>
+        </ul>
+  <div class="container-fluid">
+    <div class="heading"><h1>Our Selected Cakes</h1></div>
     <div class="row">
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/blackforest.jpg" alt="" height="400" width="400">
+          <img src="images/blackforest.jpg" alt="" height="300" width="300">
+          <h5>Blackforest</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/bananaCake.jpg" alt="" height="400" width="400">
+          <img src="images/bananaCake.jpg" alt="" height="300" width="300">
+          <h5>Banana and Almond</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/chocoCake.jpg" alt="" height="400" width="400">
+          <img src="images/chocoCake.jpg" alt="" height="300" width="300">
+          <h5>Chocolate</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/carrotCake.jpg" alt="" height="400" width="400">
+          <img src="images/carrotCake.jpg" alt="" height="300" width="300">
+          <h5>Carrot</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/chocolate.jpg" alt="" height="400" width="400">
+          <img src="images/chocolate.jpg" alt="" height="300" width="300">
+          <h5>Salted Caramel</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/chocolateStrawberry.jpg" alt="" height="400" width="400">
+          <img src="images/chocolateStrawberry.jpg" alt="" height="300" width="300">
+          <h5>Chocolate Fudge</h5>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
-          <img src="images/redVelvet1.webp" alt="" height="400" width="400">
+          <img src="images/redVelvet1.webp" alt="" height="300" width="300">
+          <h5>Red Velvet</h5>
         </div>
       </div>
 
