added the profile of our bakers

--- a/index.html
+++ b/index.html
@@ -75,8 +75,28 @@
               <h3>DELIVERY</h3> 
               <p>We offer delivery services to our customers to any place of the country that they want us to delivery at a cheaper and affordable cost.</p>
             </div>
+      </div><BR></BR><BR></BR>
+      <h2>OUR BAKERS</h2><BR></BR>
+      <BR></BR>
+    <div class="row">
+      <div class="col-md-3">
+        <img src="https://bit.ly/2CBbsvQ" height="300px" width="300px">
+        <h3>VIONA WELLS</h3>
       </div>
+      <div class="col-md-3">
+          <img src="https://bit.ly/2Kg4UHh" height="300px" width="250px">
+          <h3>NIXON KANYE</h3>
+      </div>
+      <div class="col-md-3">
+          <img src="https://bit.ly/2CCdZpu" height="300px" width="250px">
+          <h3>BRIAN KELVIN</h3>
+        </div>
+        <div class="col-md-3">
+            <img src="https://bit.ly/36UIHIt" height="300px" width="300px">
+            <h3>MARY JOHNS</h3>
+          </div>
 
+    </div>
     </div>
     </div>
   
