added an order button and styled it

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div id="home">
     <h1>Pieces & Slices</h1>
     <h4>Have some cake, it's someones birthday somewhere!</h4>
+         <a href="menu.html"><button class="button">ORDER</button></a>
+
   </div>
     <div  id="about"><br>
     <br>
@@ -80,7 +82,7 @@
       <BR></BR>
     <div class="row">
       <div class="col-md-3">
-        <img src="https://bit.ly/2CBbsvQ" height="300px" width="300px">
+        <img src="https://bit.ly/2CBbsvQ" height="300px" width="250px">
         <h3>VIONA WELLS</h3>
       </div>
       <div class="col-md-3">
@@ -92,7 +94,7 @@
           <h3>BRIAN KELVIN</h3>
         </div>
         <div class="col-md-3">
-            <img src="https://bit.ly/36UIHIt" height="300px" width="300px">
+            <img src="https://bit.ly/36UIHIt" height="300px" width="250px">
             <h3>MARY JOHNS</h3>
           </div>
 
