styled the nav-bar

--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
     <title>Pieces and Slices</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/contacts.css">
-    <link href="https://fonts.googleapis.com/css?family=Literata|Yeon+Sung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
