--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
           <li><a href="#about">About</a></li>
           <li><a href="index.html">Home</a></li>
         </ul>
-        
+      <div class="container-fluid"> 
     <div id="home">
     <h1>Pieces & Slices</h1>
     <h4>Have some cake, it's someones birthday somewhere!</h4>
          <a href="menu.html"><button class="button">ORDER</button></a>
 
   </div>
+</div> 
     <div  id="about"><br>
     <br>
     <br>
