--- a/menu.html
+++ b/menu.html
@@ -12,55 +12,99 @@
 </head>
 
 <body>
-    <ul >
-        <li><a href="contacts.html">Contacts</a></li>
-        <li><a href="menu.html">Menu</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="index.html">Home</a></li>
-        </ul>
+  <ul>
+    <li><a href="contacts.html">Contacts</a></li>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="index.html">Home</a></li>
+  </ul>
   <div class="container-fluid">
-    <div class="heading"><h1>Our Selected Cakes</h1></div>
+    <div class="heading">
+      <h1>Our Selected Cakes</h1>
+    </div>
     <div class="row">
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/blackforest.jpg" alt="" height="300" width="300">
           <h5>Blackforest</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 2400</p>
+            <p>2kg Ksh 3800</p>
+            <p>3kg Ksh 5000</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/bananaCake.jpg" alt="" height="300" width="300">
           <h5>Banana and Almond</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 2000</p>
+            <p>2kg Ksh 3200</p>
+            <p>3kg Ksh 4000</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/chocoCake.jpg" alt="" height="300" width="300">
           <h5>Chocolate</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 2800</p>
+            <p>2kg Ksh 4000</p>
+            <p>3kg Ksh 5300</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/carrotCake.jpg" alt="" height="300" width="300">
           <h5>Carrot</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 2000</p>
+            <p>2kg Ksh 3200</p>
+            <p>3kg Ksh 4000</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/chocolate.jpg" alt="" height="300" width="300">
           <h5>Salted Caramel</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 2400</p>
+            <p>2kg Ksh 2800</p>
+            <p>3kg Ksh 4000</p>
+          </div>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="cakes">
           <img src="images/chocolateStrawberry.jpg" alt="" height="300" width="300">
           <h5>Chocolate Fudge</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 3000</p>
+            <p>2kg Ksh 4200</p>
+            <p>3kg Ksh 5400</p>
+          </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-12">
         <div class="cakes">
           <img src="images/redVelvet1.webp" alt="" height="300" width="300">
           <h5>Red Velvet</h5>
+          <div class="content">
+            <h2>Prices</h2>
+            <p>1kg Ksh 3000</p>
+            <p>2kg Ksh 4200</p>
+            <p>3kg Ksh 5400</p>
+          </div>
         </div>
       </div>
 
