added flip effects at my index.html

--- a/index.html
+++ b/index.html
@@ -83,26 +83,59 @@
       <BR></BR>
     <div class="row">
       <div class="col-md-3">
-        <img src="https://bit.ly/2CBbsvQ" height="300px" width="250px">
-        <h3>VIONA WELLS</h3>
+          <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="https://bit.ly/2CBbsvQ" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>VIONA WELLS</h1> 
+                </div>
+              </div>
+            </div>
       </div>
       <div class="col-md-3">
-          <img src="https://bit.ly/2Kg4UHh" height="300px" width="250px">
-          <h3>NIXON KANYE</h3>
+          <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="https://bit.ly/2CCdZpu" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>NIXON KANYE</h1> 
+                </div>
+              </div>
+            </div>
       </div>
       <div class="col-md-3">
-          <img src="https://bit.ly/2CCdZpu" height="300px" width="250px">
-          <h3>BRIAN KELVIN</h3>
-        </div>
+          <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="https://bit.ly/2qRWrmQ" alt="Avatar" style="width:300px;height:300px;">
+                </div>
+                <div class="flip-card-back">
+                  <h1>KELVIN BRIAN</h1> 
+                </div>
+              </div>
+            </div>
+      </div>
         <div class="col-md-3">
-            <img src="https://bit.ly/36UIHIt" height="300px" width="250px">
-            <h3>MARY JOHNS</h3>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="https://bit.ly/36UIHIt" alt="Avatar" style="width:300px;height:300px;">
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>MARY JOHNS</h1> 
+                  </div>
+                </div>
+              </div>
           </div>
 
-    </div>
+    
     </div>
     </div>
   
   </div>
+ 
 </body>
 </html>
