added the social media icon to our bakers profile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text|Pacifico&display=swap" rel="stylesheet">
-  <title>BakersWebsite</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <title>PIECES & SLICES</title>
 </head>
 <body>
   <div class="container-fluid">
@@ -90,6 +92,10 @@
                 </div>
                 <div class="flip-card-back">
                   <h1>VIONA WELLS</h1> 
+                  <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                  <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <i class="fa fa-whatsapp" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -102,6 +108,10 @@
                 </div>
                 <div class="flip-card-back">
                   <h1>NIXON KANYE</h1> 
+                  <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                  <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <i class="fa fa-whatsapp" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -113,7 +123,11 @@
                   <img src="https://bit.ly/2qRWrmQ" alt="Avatar" style="width:300px;height:300px;">
                 </div>
                 <div class="flip-card-back">
-                  <h1>KELVIN BRIAN</h1> 
+                  <h1>KELVIN BRIAN</h1>
+                  <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                  <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <i class="fa fa-whatsapp" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -126,6 +140,10 @@
                   </div>
                   <div class="flip-card-back">
                     <h1>MARY JOHNS</h1> 
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
