--- a/menu.html
+++ b/menu.html
@@ -14,8 +14,6 @@
 <body>
   <ul>
     <li><a href="contacts.html">Contacts</a></li>
-    <li><a href="menu.html">Menu</a></li>
-    <li><a href="#about">About</a></li>
     <li><a href="index.html">Home</a></li>
   </ul>
   <div class="container-fluid">
@@ -28,7 +26,7 @@
           <img src="images/blackforest.jpg" alt="" height="300" width="300">
           <h5>Blackforest</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 2400</p>
             <p>2kg Ksh 3800</p>
             <p>3kg Ksh 5000</p>
@@ -40,7 +38,7 @@
           <img src="images/bananaCake.jpg" alt="" height="300" width="300">
           <h5>Banana and Almond</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 2000</p>
             <p>2kg Ksh 3200</p>
             <p>3kg Ksh 4000</p>
@@ -52,7 +50,7 @@
           <img src="images/chocoCake.jpg" alt="" height="300" width="300">
           <h5>Chocolate</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 2800</p>
             <p>2kg Ksh 4000</p>
             <p>3kg Ksh 5300</p>
@@ -64,7 +62,7 @@
           <img src="images/carrotCake.jpg" alt="" height="300" width="300">
           <h5>Carrot</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 2000</p>
             <p>2kg Ksh 3200</p>
             <p>3kg Ksh 4000</p>
@@ -76,7 +74,7 @@
           <img src="images/chocolate.jpg" alt="" height="300" width="300">
           <h5>Salted Caramel</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 2400</p>
             <p>2kg Ksh 2800</p>
             <p>3kg Ksh 4000</p>
@@ -88,7 +86,7 @@
           <img src="images/chocolateStrawberry.jpg" alt="" height="300" width="300">
           <h5>Chocolate Fudge</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 3000</p>
             <p>2kg Ksh 4200</p>
             <p>3kg Ksh 5400</p>
@@ -100,13 +98,18 @@
           <img src="images/redVelvet1.webp" alt="" height="300" width="300">
           <h5>Red Velvet</h5>
           <div class="content">
-            <h2>Prices</h2>
+            <h2>Price</h2>
             <p>1kg Ksh 3000</p>
             <p>2kg Ksh 4200</p>
             <p>3kg Ksh 5400</p>
           </div>
         </div>
       </div>
+      <div class="container twoFlavours">
+        <h3>You can combine any two flavours in one cake, having them in layers at an additional cost.</h3>
+      </div>
+    </div>
+    <div class="cupcakes">
 
     </div>
   </div>
