Added an image of cupcakes.

--- a/menu.html
+++ b/menu.html
@@ -109,8 +109,18 @@
         <h3>You can combine any two flavours in one cake, having them in layers at an additional cost.</h3>
       </div>
     </div>
-    <div class="cupcakes">
-
+    <div class="cupcakes container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img src="images/cupcakes1.jpg" alt="" height="300">
+        </div>
+        <div class="col-lg-6">
+            <h3>Want cupcakes instead?</h3>
+            <p>
+              No problem! All the cakes apart fom blackforest are available as cupcakes at Ksh 700 for a dozen
+            </p>
+          </div>
+      </div>
     </div>
   </div>
 </body>
