--- a/menu.html
+++ b/menu.html
@@ -112,13 +112,13 @@
     <div class="cupcakes container">
       <div class="row">
         <div class="col-lg-6">
-          <img src="images/cupcakes1.jpg" alt="" height="300">
+          <img src="images/cupcakes2.jpg" alt="" height="300">
         </div>
-        <div class="col-lg-6">
-            <h3>Want cupcakes instead?</h3>
-            <p>
+        <div class="col-lg-6 description">
+            <h1>Want cupcakes instead?</h1>
+            <h4>
               No problem! All the cakes apart fom blackforest are available as cupcakes at Ksh 700 for a dozen
-            </p>
+            </h4>
           </div>
       </div>
     </div>
