--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
 <body>
     <header>
             <ul>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="contacts.html">Contact Us</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
