--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container-fluid">
       <ul >
-        <li><a href="contacts.html">Contacts</a></li>
+        <li><a href="contacts.html">Contacts Us</a></li>
         <li><a href="menu.html">Menu</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="index.html">Home</a></li>
