--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 
 <body>
   <ul>
-    <li><a href="contacts.html">Contacts</a></li>
+    <li><a href="contacts.html">Contact Us</a></li>
     <li><a href="index.html">Home</a></li>
   </ul>
   <div class="container-fluid">
@@ -122,6 +122,12 @@
           </div>
       </div>
     </div>
+    <div>
+      <footer class="container footer">
+       <h4>You can ALWAYS have cake!</h4> 
+      </footer>
+    </div>
+    
   </div>
 </body>
 
