--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 
 <body>
   <ul>
-    <li><a href="contacts.html">Contact Us</a></li>
+    <li><a href="contacts.html">Contacts</a></li>
     <li><a href="index.html">Home</a></li>
   </ul>
   <div class="container-fluid">
