added the delivery image at how we work

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>I our bakers shop our chefs must be in their uniform hence making the presantable in the work and professional.</p>
           </div>
           <div class="col-md-4">
-              <img src="https://bit.ly/2q9PFIP" height="250px" width="250px">
+              <img src="https://bit.ly/2QfPoyJ" height="250px" width="250px">
               <h3>DELIVERY</h3> 
               <p>We offer delivery services to our customers to any place of the country that they want us to delivery at a cheaper and affordable cost.</p>
             </div>
@@ -96,6 +96,7 @@
                   <i class="fa fa-twitter-square" aria-hidden="true"></i>
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -112,6 +113,7 @@
                   <i class="fa fa-twitter-square" aria-hidden="true"></i>
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -128,6 +130,7 @@
                   <i class="fa fa-twitter-square" aria-hidden="true"></i>
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -144,6 +147,7 @@
                     <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     <i class="fa fa-instagram" aria-hidden="true"></i>
                     <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
