added a README.md

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>PIECES & SLICES</title>
-</head>1-ian-mwalimu:~/Desktop/moringa-school-projects/BakersWebsite$ git pull upstream master
-remote: Enumerating objects: 14, done.
+</head>
 
 <body>
   <div class="container-fluid">
