--- a/menu.html
+++ b/menu.html
@@ -122,6 +122,16 @@
           </div>
       </div>
     </div>
+    <div class="delivery">
+        <form action="">
+          <div class="form-group">
+            <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+            <input type="number" id="phone" class="form-control mb-3" placeholder="Phone Number">
+            <input type="text" id="location" class="form-control mb-3" placeholder="Location for delivery">
+            <button class="btn btn-outline-success" id="final-order">Place Order</button>
+          </div>
+        </form>
+      </div>
     <div>
       <footer class="container footer">
        <h4>You can ALWAYS have cake!</h4> 
