--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </ul>
       <div class="container-fluid"> 
     <div id="home">
-    <h1>PIECES & SLICES</h1>
-    <h4>Have some cake, it's someones birthday somewhere!</h4>
+      <h1>PIECES & SLICES</h1>
+      <h4>Freshly baked cakes</h4>
          <a href="menu.html"><button class="button">ORDER</button></a>
 
   </div>
