--- a/contacts.html
+++ b/contacts.html
@@ -47,14 +47,14 @@
                         <input type="text" name="name" placeholder="last name" id="username">
                     </div>
                     <div class="input-group">
-                        <input type="email" class="margin2" name="email" placeholder="email@example.com" required="">
-                        <input type="text" name="number" placeholder="phone number" required="">
+                        <input type="email" class="margin2" name="email" placeholder="email@example.com" id="email" required="">
+                        <input type="text" name="number" placeholder="phone number" id="number" required="">
                     </div>
                     <div class="input-group">
-                        <textarea rows="4" cols="12" placeholder="message"></textarea>
+                        <textarea rows="4" cols="12" placeholder="message" id="message"></textarea>
                     </div>
                     <div class="input-group1">
-                        <input type="submit" value="send">
+                        <input type="submit" value="send" id="send">
                     </div>
                 </form>
             </div>
