Added js to accept input.

--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/menu.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+  <script src="js/scripts.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
   <title>Menu</title>
 </head>
 
@@ -18,7 +20,7 @@
   </ul>
   <div class="container-fluid">
     <div class="heading">
-      <h1>Our Selected Cakes</h1>
+      <h1>~Our Selected Cakes~</h1>
     </div>
     <div class="row">
       <div class="col-lg-4">
@@ -123,11 +125,11 @@
       </div>
     </div>
     <form action="" class="form container">
-      <h1 class="heading">Order Here</h4>
-      <div class="row">
+      <h1 class="heading">~Order Here~</h4>
+      <div class="row orderForm">
         <div class="col-lg-6">
           <label for="select">
-            <h2 class="heading">Cakes</h2>
+            <h2 class="heading">~Cakes 🎂~</h2>
             <h4>Flavour</h4>
           </label>
             <select class="browser-default custom-select custom-select-md mb-3 name">
@@ -166,7 +168,7 @@
     </div>
     <div class="col-lg-6">
         <form action="" class="form container">
-            <h2 class="heading">Cupcakes</h2>
+            <h2 class="heading">~Cupcakes 🧁~</h2>
             <label for="select">
               <h4>Flavour</h4>
             </label>
