--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 <body>
   <div class="container-fluid">
-      <ul >
+      <ul>
+        <logo>
+          <img src="images/logo.png">
+        </logo>
+
         <li><a href="contacts.html">Contacts</a></li>
         <li><a href="menu.html">Menu</a></li>
           <li><a href="#about">About</a></li>
