Added js to accept input and get prices corresponding to that value.

--- a/menu.html
+++ b/menu.html
@@ -132,7 +132,7 @@
             <h2 class="heading">~Cakes 🎂~</h2>
             <h4>Flavour</h4>
           </label>
-            <select class="browser-default custom-select custom-select-md mb-3 name">
+            <select class="browser-default custom-select custom-select-md mb-3 flavour">
               <option selected value="0">Select flavour here</option>
               <option value="Blackforest">Blackforest</option>
               <option value="Banana">Banana and Almond</option>
@@ -156,7 +156,7 @@
             <label for="select">
               <h4>Bakers</h4>
             </label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+            <select class="browser-default custom-select custom-select-md mb-3" id="bakers">
               <option selected value="0">Select your preferred baker</option>
               <option value="Viona">Viona Wells</option>
               <option value="Nixon">Nixon Kanye</option>
@@ -172,7 +172,7 @@
             <label for="select">
               <h4>Flavour</h4>
             </label>
-            <select class="browser-default custom-select custom-select-md mb-3 name">
+            <select class="browser-default custom-select custom-select-md mb-3 flavour">
               <option selected value="0">Select flavour here</option>
               <option value="Banana">Banana and Almond</option>
               <option value="Chocolate">Chocolate</option>
@@ -195,7 +195,7 @@
             <label for="select">
               <h4>Bakers</h4>
             </label>
-            <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+            <select class="browser-default custom-select custom-select-md mb-3" id="baker">
               <option selected value="0">Select your preferred baker</option>
               <option value="Viona">Viona Wells</option>
               <option value="Nixon">Nixon Kanye</option>
